--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>WKC Dog Show</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
-    <script src="./src/index.js"></script>
+    <script defer src="./src/index.js"></script>
     <link rel="stylesheet" href="./assets/style.css" />
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Open+Sans" rel="stylesheet" />
   </head>
@@ -13,13 +13,19 @@
       <h1 class='padding margin'>Westminster Kennel Club Dog Show</h1>
 
       <div class="margin flex">
-        <h4 class='center'>Edit Existing Dog</h4>
+        <h4 class='center'>Add Dog</h4>
         <form id='dog-form' class="padding margin border-round border-grey">
           <input type="text" name="name" placeholder="dog's name" value="" />
           <input type="text" name="breed" placeholder="dog's breed" value="" />
           <input type="text" name="sex" placeholder="dog's sex" value="" />
           <input type="submit" value="Submit" />
         </form>
+      </div>
+
+      <div>
+        <h1 id="dog-name">Name Here</h1>
+        <h2 id="dog-breed">Breed Here</h2>
+        <h3 id="dog-sex">Sex Here</h3>
       </div>
 
       <div class="margin flex">
@@ -30,7 +36,7 @@
               <th class='padding center'>Name</th>
               <th class='padding center'>Breed</th>
               <th class='padding center'>Sex</th>
-              <th class='padding center'>Edit Dog</th>
+              <th class='padding center'>Show Dog</th>
             </tr>
           </thead>
           <tbody id="table-body">
